# BioStructBenchmark

./: .gitignore  .pre-commit-config.yaml  ALIGNMENT_AUDIT.md  BFACTOR_REVIEW.md  CLAUDE.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: task-request.md
.github/workflows/: run_tests.yml
.hypothesis/constants/: 12a644df4648738c  28d2aeae9cb16891  451c617237a7528c  80904dee56f75bf8  8664dc0c2fb0ab99  ac146b3c32411eff  b9680e05dd94416c  cd1ae7d17a6d599b  df910e529f0c5ac1
.hypothesis/examples/04e6b3400353b141/: 8f36e69c9632c2ae
biostructbenchmark/: __init__.py  __main__.py  cli.py  main.py
biostructbenchmark/analysis/: __init__.py  bfactor.py  consensus.py  curves.py  mutations.py  secondary.py
biostructbenchmark/core/: __init__.py  alignment.py  atoms.py  interface.py  io.py  sequences.py  structural.py
biostructbenchmark/visualization/: curves_plots.py  plots.py  residue_plots.py
scripts/: profile_benchmark.py
scripts/dataset/: pdb_download.py  pdb_search.py  prepare_rf2na_inputs.py
tests/: conftest.py  test_alignment.py  test_alignment_verification.py  test_alignment_verification.py.disabled  test_bfactor.py  test_cli.py  test_interface.py  test_io.py  test_io_enhanced.py  test_sequences.py  test_sequences_enhanced.py  test_structural.py  test_structure_output.py
